@@ -334,7 +334,11 @@ The following are common ORB configurations used by TAO applications.<P>
       </table>
 
       <P>Check out the <tt><a href="../examples/Simple/grid/">Grid</a></tt>
-      for an example of this configuration. <P>
+      for an example of a default configuration and 
+      <tt><a href="../performance-tests/Latency/Single_Threaded/">this</a></tt> 
+      test for an example of settings that would provide better performance.
+      
+      <P>
 
   <li> <a NAME="tpc"></a><B>Multiple threads, single ORB, thread-per-connection
       model.</B></li> <P>
